--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,88 +7,82 @@
     tools:context=".MainActivity"
     android:orientation="vertical"
     android:weightSum="1"
-    android:padding="1dp"
+    android:background="#066ec8">
 
-    android:background="#0099cc">
-
-    <EditText
+    <com.example.administrator.mycaculator.Display
         android:layout_width="match_parent"
-        android:layout_height="115dp"
+        android:layout_height="116dp"
         android:id="@+id/display"
-        android:cursorVisible="false"
-        android:textSize="50sp"
-        android:editable="false"
+        android:textSize="25sp"
+        android:cursorVisible="true"
         android:gravity="right|bottom"
         android:background="#99ccff"
-        android:layout_marginLeft="1dp"
+        android:layout_marginTop="2dp"
         android:layout_marginBottom="1dp"
+       />
+
+
+    <TableRow
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
+    <Button
+        android:layout_height="55dp"
+        android:layout_width="88dp"
+        android:id="@+id/clear"
+        android:text="@string/clear"
+        android:textSize="40sp"
+        android:textColor="#fff"
+        android:background="#003366"
+        android:layout_marginLeft="1dp"
+
+        android:layout_marginRight="1dp"
+        android:layout_marginTop="1dp"/>
+
+    <Button
+        android:layout_height="55dp"
+        android:id="@+id/tan"
+        android:text="@string/tan"
+        android:textSize="40sp"
+        android:layout_width="88dp"
+        android:textAllCaps="false"
+        android:textColor="#fff"
+        android:background="#003366"
+        android:layout_marginLeft="1dp"
+
+        android:layout_marginRight="1dp"
+        android:layout_marginTop="1dp"/>
+    <Button
+        android:layout_height="55dp"
+        android:id="@+id/fac"
+        android:text="@string/fac"
+        android:textSize="40sp"
+        android:layout_width="88dp"
+        android:textAllCaps="false"
+        android:textColor="#fff"
+        android:background="#003366"
+        android:layout_marginLeft="1dp"
+
         android:layout_marginRight="1dp"
         android:layout_marginTop="1dp"
         />
 
 
-    <TableRow
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <Button
+        android:layout_height="55dp"
+        android:id="@+id/back"
+        android:text="@string/back"
+        android:textAllCaps="false"
+        android:textSize="40sp"
+        android:layout_width="88dp"
+        android:textColor="#000000"
+        android:background="#4d4e58"
+        android:layout_marginLeft="1dp"
+        android:layout_marginRight="1dp"
+        android:layout_marginTop="1dp"
+        />
 
-        <Button
-            android:layout_height="55dp"
-            android:layout_width="88dp"
-            android:id="@+id/clear"
-            android:text="@string/clear"
-            android:textSize="40sp"
-            android:textColor="#fff"
-            android:background="#003366"
-            android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
-            android:layout_marginRight="1dp"
-            android:layout_marginTop="1dp"/>
-
-         <Button
-            android:layout_height="55dp"
-            android:id="@+id/tan"
-            android:text="@string/tan"
-            android:textSize="40sp"
-            android:layout_width="88dp"
-            android:textAllCaps="false"
-            android:textColor="#fff"
-            android:background="#003366"
-            android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
-            android:layout_marginRight="1dp"
-            android:layout_marginTop="1dp"/>
-        <Button
-            android:layout_height="55dp"
-            android:id="@+id/fac"
-            android:text="@string/fac"
-            android:textSize="40sp"
-            android:layout_width="88dp"
-            android:textAllCaps="false"
-            android:textColor="#fff"
-            android:background="#003366"
-            android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
-            android:layout_marginRight="1dp"
-            android:layout_marginTop="1dp"
-            />
-
-
-        <Button
-            android:layout_height="55dp"
-            android:id="@+id/back"
-            android:text="@string/back"
-            android:textAllCaps="false"
-            android:textSize="40sp"
-            android:layout_width="88dp"
-            android:textColor="#000"
-            android:background="#666666"
-            android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
-            android:layout_marginRight="1dp"
-            android:layout_marginTop="1dp"
-            />
-
-    </TableRow>
+</TableRow>
 
     <TableRow
         android:layout_width="wrap_content"
@@ -103,7 +97,6 @@
             android:textColor="#fff"
             android:background="#003366"
             android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
             android:layout_marginRight="1dp"
             android:layout_marginTop="1dp"
             />
@@ -117,7 +110,6 @@
             android:textColor="#fff"
             android:background="#003366"
             android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
             android:layout_marginRight="1dp"
             android:layout_marginTop="1dp"
             />
@@ -130,7 +122,6 @@
             android:textColor="#fff"
             android:background="#003366"
             android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
             android:layout_marginRight="1dp"
             android:layout_marginTop="1dp"
             />
@@ -143,7 +134,6 @@
             android:textColor="#fff"
             android:background="#003366"
             android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
             android:layout_marginRight="1dp"
             android:layout_marginTop="1dp"
             />
@@ -151,6 +141,67 @@
 
 
     </TableRow>
+    <TableRow
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_height="55dp"
+            android:layout_width="88dp"
+            android:id="@+id/log"
+            android:text="@string/log"
+            android:textAllCaps="false"
+            android:textSize="40sp"
+            android:textColor="#fff"
+            android:background="#003366"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginTop="1dp"/>
+
+        <Button
+            android:layout_height="55dp"
+            android:id="@+id/ln"
+            android:text="@string/ln"
+            android:textSize="40sp"
+            android:layout_width="88dp"
+            android:textAllCaps="false"
+            android:textColor="#fff"
+            android:background="#003366"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginTop="1dp"/>
+        <Button
+            android:layout_height="55dp"
+            android:id="@+id/pi"
+            android:text="@string/pi"
+            android:textSize="40sp"
+            android:layout_width="88dp"
+            android:textAllCaps="false"
+            android:textColor="#fff"
+            android:background="#003366"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginTop="1dp"
+            />
+
+
+        <Button
+            android:layout_height="55dp"
+            android:id="@+id/e"
+            android:text="@string/e"
+            android:textAllCaps="false"
+            android:textSize="40sp"
+            android:layout_width="88dp"
+            android:textColor="#fff"
+            android:background="#003366"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginTop="1dp"
+            />
+
+    </TableRow>
+
+
     <TableRow
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -167,7 +218,6 @@
             android:textColor="#fff"
             android:background="#003366"
             android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
             android:layout_marginRight="1dp"
             android:layout_marginTop="1dp"/>
         <Button
@@ -179,7 +229,6 @@
             android:textColor="#fff"
             android:background="#003366"
             android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
             android:layout_marginRight="1dp"
             android:layout_marginTop="1dp"
             />
@@ -193,23 +242,23 @@
             android:textColor="#fff"
             android:background="#003366"
             android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
             android:layout_marginRight="1dp"
             android:layout_marginTop="1dp"/>
 
         <Button
             android:layout_height="55dp"
             android:layout_width="88dp"
-            android:id="@+id/add"
-            android:text="@string/add"
+            android:id="@+id/mul"
+            android:text="@string/multiply"
             android:textSize="40sp"
+            android:textAllCaps="false"
             android:textColor="#fff"
             android:background="#003366"
             android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
             android:layout_marginRight="1dp"
             android:layout_marginTop="1dp"
             />
+
 
     </TableRow>
     <TableRow
@@ -222,9 +271,8 @@
             android:text="@string/seven"
             android:textSize="40sp"
             android:textColor="#fff"
-            android:background="#003366"
+            android:background="#6699cc"
             android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
             android:layout_marginRight="1dp"
             android:layout_marginTop="1dp"
             />
@@ -235,9 +283,8 @@
             android:text="@string/eight"
             android:textSize="40sp"
             android:textColor="#fff"
-            android:background="#003366"
+            android:background="#6699cc"
             android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
             android:layout_marginRight="1dp"
             android:layout_marginTop="1dp"
             />
@@ -248,9 +295,8 @@
             android:text="@string/nine"
             android:textSize="40sp"
             android:textColor="#fff"
-            android:background="#003366"
+            android:background="#6699cc"
             android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
             android:layout_marginRight="1dp"
             android:layout_marginTop="1dp"/>
         <Button
@@ -262,7 +308,6 @@
             android:textColor="#fff"
             android:background="#003366"
             android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
             android:layout_marginRight="1dp"
             android:layout_marginTop="1dp"
             />
@@ -279,9 +324,8 @@
             android:text="@string/four"
             android:textSize="40sp"
             android:textColor="#fff"
-            android:background="#003366"
+            android:background="#6699cc"
             android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
             android:layout_marginRight="1dp"
             android:layout_marginTop="1dp"
             />
@@ -292,9 +336,8 @@
             android:text="@string/five"
             android:textSize="40sp"
             android:textColor="#fff"
-            android:background="#003366"
+            android:background="#6699cc"
             android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
             android:layout_marginRight="1dp"
             android:layout_marginTop="1dp"
             />
@@ -305,22 +348,20 @@
             android:text="@string/six"
             android:textSize="40sp"
             android:textColor="#fff"
-            android:background="#003366"
+            android:background="#6699cc"
             android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
             android:layout_marginRight="1dp"
             android:layout_marginTop="1dp"/>
+
         <Button
             android:layout_height="55dp"
             android:layout_width="88dp"
-            android:id="@+id/mul"
-            android:text="@string/multiply"
+            android:id="@+id/add"
+            android:text="@string/add"
             android:textSize="40sp"
-            android:textAllCaps="false"
             android:textColor="#fff"
             android:background="#003366"
             android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
             android:layout_marginRight="1dp"
             android:layout_marginTop="1dp"
             />
@@ -344,9 +385,8 @@
                     android:textSize="40sp"
                     android:id="@+id/one"
                     android:textColor="#fff"
-                    android:background="#003366"
+                    android:background="#6699cc"
                     android:layout_marginLeft="1dp"
-                    android:layout_marginBottom="1dp"
                     android:layout_marginRight="1dp"
                     android:layout_marginTop="1dp"/>
                 <Button
@@ -356,9 +396,8 @@
                     android:textSize="40sp"
                     android:id="@+id/two"
                     android:textColor="#fff"
-                    android:background="#003366"
+                    android:background="#6699cc"
                     android:layout_marginLeft="1dp"
-                    android:layout_marginBottom="1dp"
                     android:layout_marginRight="1dp"
                     android:layout_marginTop="1dp"
                     />
@@ -369,9 +408,8 @@
                     android:textSize="40sp"
                     android:id="@+id/three"
                     android:textColor="#fff"
-                    android:background="#003366"
+                    android:background="#6699cc"
                     android:layout_marginLeft="1dp"
-                    android:layout_marginBottom="1dp"
                     android:layout_marginRight="1dp"
                     android:layout_marginTop="1dp"/>
             </LinearLayout>
@@ -385,9 +423,8 @@
                     android:id="@+id/zero"
                     android:textSize="40sp"
                     android:textColor="#fff"
-                    android:background="#003366"
+                    android:background="#6699cc"
                     android:layout_marginLeft="1dp"
-                    android:layout_marginBottom="1dp"
                     android:layout_marginRight="1dp"
                     android:layout_marginTop="1dp"/>
                 <Button
@@ -397,9 +434,8 @@
                     android:textSize="40sp"
                     android:id="@+id/dot"
                     android:textColor="#fff"
-                    android:background="#003366"
+                    android:background="#6699cc"
                     android:layout_marginLeft="1dp"
-                    android:layout_marginBottom="1dp"
                     android:layout_marginRight="1dp"
                     android:layout_marginTop="1dp"/>
 
@@ -408,11 +444,16 @@
         </LinearLayout>
         <Button
             android:layout_width="88dp"
-            android:layout_height="113sp"
+            android:layout_height="111sp"
             android:text="@string/equal"
             android:textSize="50sp"
             android:id="@+id/equal"
-            android:background="#666666"/>
+            android:textColor="#000000"
+            android:background="#4d4e58"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginTop="1dp"
+            />
 
     </LinearLayout>
 </LinearLayout>
