--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,15 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="FunctionButton">
+        <item name="android:layout_height">55dp</item>
+        <item name="android:layout_width">88dp</item>
+        <item name="android:textSize">40sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/colorText</item>
+        <item name="android:background">@color/colorButton</item>
+        <item name="android:layout_marginLeft">1dp</item>
+        <item name="android:layout_marginRight">1dp</item>
+        <item name="android:layout_marginTop">1dp</item>
+    </style>
 </resources>
